# GeneralsModBuilder

./: CleanBuild.bat  CleanCache.bat  CleanVenv.bat  LICENSE  README.md  SETTINGS.md  clean.bat  py-requirements.txt
ModBuilder/: .gitignore  DefaultRunner.json  DefaultTools.json  MANIFEST.in  ModBuilder.txt  TemplateBundlePacks.json  build-lite.json  build.bat  build.json  build.py  buildproject.py  generalsmodbuilder.spec  poetry-instructions.txt  pyproject.toml  requirements.txt  setup.bat  setup.py
ModBuilder/Scripts/: DefaultFolders.json  DefaultTools.json
ModBuilder/Scripts/Python/: __main__.py  builder.py  bundles.py  folders.py  main.py  modbuilder.py  runner.py  tools.py  util.py  utils.py
ModBuilder/Scripts/Windows/: GetPython.bat  Run.bat  RunBuilder.bat  SetupFolders.bat  VenvActivate.bat  VenvCheck.bat  VenvMake.bat  VenvMakeFromScratch.bat
ModBuilder/config/: DefaultTools.json  TemplateBundleItems.json
ModBuilder/generalsmodbuilder/: __main__.py  __version__.py  buildfunctions.py  main.py  util.py
ModBuilder/generalsmodbuilder/changelog/: generator.py
ModBuilder/generalsmodbuilder/config/: DefaultRunner.json  DefaultTools.json
ModBuilder/generalsmodbuilder/data/: buildfiles.py  bundles.py  changeconfig.py  common.py  folders.py  runner.py  tools.py
ModBuilder/generalsmodbuilder/gui/: gui.py
ModBuilder/windows/: RunBuilder.bat  RunPython.bat  SetupFolders.bat  VenvActivate.bat  VenvCheck.bat  VenvMake.bat  VenvMakeFromScratch.bat  build-lite.bat  build.bat  package.bat  pyinstaller.bat  setupfolders.bat
SampleProject/: .gitignore  (+6 more)
(+55 files in other folders)
